--- a/FRONTEND/style.css
+++ b/FRONTEND/style.css
@@ -43,10 +43,10 @@ body {
   
   button {
     margin-top: 1rem;
-    padding: 0.8rem 1.5rem;
+    padding: 0.7rem .9rem;
     background-color: rgb(123, 127, 130);
     border: none;
-    border-radius: 6px;
+    border-radius: 20px;
     color: white;
     font-weight: bold;
     cursor: pointer;
@@ -54,9 +54,23 @@ body {
   }
   .button-wrapper {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;  
+    align-items: center;
+    width: 100%;
+    padding: 10px;
   }
-  
+  .upload{
+    display: none;
+  }
+
+  label{
+    margin-top: 1rem;
+    padding: 0.7rem .9rem;
+    background-color: rgb(123, 127, 130);
+    border: none;
+    border-radius: 10px;
+  }
+ 
   button:hover {
     background-color: #caccce;
   }
